Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mrlaimobilecardetailing.com/">
+    <meta property="og:url" content="https://clientesweb.github.io/Mr.Lai-sMobileDetailingServices/">
     <meta property="og:title" content="Mr.Lai's Mobile Car Detailing Services - SGV/LA">
     <meta property="og:description" content="Professional mobile car detailing services in SGV/LA. Appointments only. Offering Mobile Detailing, Foam Wash, Hand Wash, Claybar, Shampooing, and Ceramic Coating.">
-    <meta property="og:image" content="https://www.mrlaimobilecardetailing.com/img/logo.png">
+    <meta property="og:image" content="https://clientesweb.github.io/Mr.Lai-sMobileDetailingServices/img/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.mrlaimobilecardetailing.com/">
+    <meta property="twitter:url" content="https://clientesweb.github.io/Mr.Lai-sMobileDetailingServices/">
     <meta property="twitter:title" content="Mr.Lai's Mobile Car Detailing Services - SGV/LA">
     <meta property="twitter:description" content="Professional mobile car detailing services in SGV/LA. Appointments only. Offering Mobile Detailing, Foam Wash, Hand Wash, Claybar, Shampooing, and Ceramic Coating.">
-    <meta property="twitter:image" content="https://www.mrlaimobilecardetailing.com/img/logo.png">
+    <meta property="twitter:image" content="https://clientesweb.github.io/Mr.Lai-sMobileDetailingServices/img/logo.png">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
